# 3_Django_dogs

./: .env-non-dev.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Django_project/Django_project/: settings.py  urls.py
Django_project/dogs/: admin.py  models.py  serializers.py  views.py
Django_project/dogs/migrations/: 0001_initial.py  0002_breed_alter_dog_gender_dog_breed.py  0003_alter_breed_name.py
Django_project/dogs/tests/: test_api.py  test_serializers.py
